@@ -22,6 +22,9 @@ Prints the version number of gerbv and exits.
 .BI -l\ <filename>|--log=<filename>
 All error messages etc are stored in a file with filename \fI<filename>\fP.
 .TP
+.BI --tools=<tools-filename>
+Read Excellon tools from the file \fI<filename>\fP.
+.TP
 .BI --geometry=<width>x<height>[<+->x-position[<+->y-position]]
 Sets the the size of the window. X-position and y-position are currently
 ignored by gerbv.
@@ -148,6 +151,46 @@ path for init.scm is (in the following order)
 @BACKEND_DIR@/share/gerbv/scheme/, the directory with the executable
 gerbv, the directory gerbv was invoked from and finally
 according to the environment variable GERBV_SCHEMEINIT.
+
+.SH "TOOLS FILE"
+Not every Excellon drill file is self-sufficient. Some CADs produce .drd
+files where tools are only referenced, but never defined (such as what
+diameter of the tool is.) Eagle CAD is one of such CADs, and there are more
+since many board houses require Tools files.
+
+A Tools file is a plain text file which you create in an editor. Each line
+of the file describes one tool (the name and the diameter, in inches):
+
+.nf
+	T01 0.024
+	T02 0.040
+	...
+.fi
+
+These are the same tools (T01 etc.) that are used in the Drill file.
+A standard practice with Eagle is to create an empty Tools file, run the
+CAM processor, and the error report tells you which tools you "forgot".
+Then you put these tools into the file and rerun the CAM processor.
+
+The file can have any name you wish, but Eagle expects the file type to
+be ".drl", so it makes sense to keep it this way. Some board houses are
+still using CAM software from DOS era, so you may want to excercise caution
+before going beyond the 8.3 naming convention.
+
+When \fIgerbv\fP reads the Tools file it also checks that there are no
+duplicate definitions of tools. This does happen from time to time as you
+edit the file by hand, especially if you, during design, add or remove parts
+from the board and then have to add new tools into the Tools file. The
+duplicate tools are a very serious error which will stop (HOLD) your board
+until you fix the Tools file and maybe the Excellon file. \fIgerbv\fP will
+detect duplicate tools if they are present, and will exit immediately to
+indicate such a fatal error in a very obvious way. A message will also be
+printed to standard error.
+
+If your Excellon file does not contain tool definitions then \fIgerbv\fP
+will preconfigure the tools by deriving the diameter of the drill bit
+from the tool number. This is probably not what you want, and you
+will see warnings printed on the console.
 
 .SH "ENVIRONMENT"
 .IP GERBV_SCHEMEINIT
